--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,16 @@
-@import './base.css';
-
 #app {
-  font-weight: normal;
+  color: $light-font-color;
+  background-color: $light-background-color;
+  a {
+    color: $light-font-color;
+    text-decoration: none;
+    transition: 0.4s;
+  }
+  .dark {
+    background-color: $dark-background-color;
+    color: $dark-font-color;
+    a {
+      color: $dark-font-color;
+    }
+  }
 }
