--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -6,8 +6,13 @@
   font-weight: normal;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   min-height: 100vh;
+  min-width: 500px;
   line-height: 1.6;
   font-family: 'Noto Sans JP', monospace;
   font-weight: normal;
